2005-08-01  Jim Meyering  <jim@meyering.net>

	* xanstrftime.m4 (gl_FUNC_XANSTRFTIME): New file/macro.
	* jm-macros.m4: Require gl_FUNC_XANSTRFTIME.

2005-07-25  Paul Eggert  <eggert@cs.ucla.edu>

	* regex.m4 (gl_INCLUDED_REGEX): Use AC_RUN_ELSE instead of the
	obsolescent AC_TRY_RUN.  Include the default includes files, for 'exit'.

2005-07-21  Paul Eggert  <eggert@cs.ucla.edu>

	* getdate.m4 (gl_C_COMPOUND_LITERALS): New macro.
	(gl_GETDATE): Use it.

2005-07-13  Paul Eggert  <eggert@cs.ucla.edu>

	* lib-check.m4 (cu_LIB_CHECK): Remove no-longer-necessary check
	for fesetround.

2005-07-08  Paul Eggert  <eggert@cs.ucla.edu>

	* jm-macros.m4 (gl_CHECK_ALL_HEADERS): Check for stropts.h.

2005-07-07  Paul Eggert  <eggert@cs.ucla.edu>

	* backupfile.m4 (gl_BACKUPFILE): Use AC_CHECK_FUNCS_ONCE on pathconf.
	* same.m4 (gl_SAME): Likewise.
	Require AC_SYS_LONG_FILE_NAMES; bug reported by Gerrit P. Haase.

	Switch to Isamu Hasegawa's implementation of regex, which is
	now in gnulib.
	* regex.m4: Import from gnulib.

2005-07-04  Paul Eggert  <eggert@cs.ucla.edu>

	* prereq.m4 (gl_PREREQ): Don't require gl_TYPEOF; no longer needed.
	* typeof.m4: Remove; no longer needed.

2005-07-03  Paul Eggert  <eggert@cs.ucla.edu>

	Remove the dependency of the strftime module on the tzset module.
	* strftime.m4 (gl_FUNC_STRFTIME): Don't require gl_FUNC_TZSET_CLOBBER.
	* prereq.m4 (gl_PREREQ): Add gl_FUNC_TZSET_CLOBBER.

2005-07-03  Jim Meyering  <jim@meyering.net>

	* lstat.m4 (gl_FUNC_LSTAT): New file, from gnulib.
	Use AC_LIBSOURCES to require lstat.c and lstat.h.
	Remove obsolete comment.

2005-07-03  Paul Eggert  <eggert@cs.ucla.edu>

	* fts.m4 (gl_FUNC_FTS_CORE): Don't require
	AC_FUNC_LSTAT_FOLLOWS_SLASHED_SYMLINK; that's now the lstat
	module's job.
	* jm-macros.m4 (gl_MACROS): Likewise.
	* prereq.m4 (gl_PREREQ): Add gl_FUNC_LSTAT.

2005-07-03  Jim Meyering  <jim@meyering.net>

	* fcntl-safer.m4 (gl_FCNTL_SAFER): Add fcntl--.h to the list.