@@ -1,3 +1,8 @@
+2005-08-27  Jim Meyering  <jim@meyering.net>
+
+	* fcntl-safer.m4, stdio-safer.m4, unistd-safer.m4: Sync from gnulib.
+
+
 2005-08-01  Jim Meyering  <jim@meyering.net>
 
 	* xanstrftime.m4 (gl_FUNC_XANSTRFTIME): New file/macro.
@@ -61,7 +66,7 @@
 
 	* fcntl-safer.m4 (gl_FCNTL_SAFER): Add fcntl--.h to the list.
 	* stdio-safer.m4 (gl_STDIO_SAFER): Add stdio--.h to the list.
-	* stdlib-safer.m4: (gl_STDLIB_SAFER): Add stdlib--.h to the list.
+	* stdlib-safer.m4 (gl_STDLIB_SAFER): Add stdlib--.h to the list.
 	* unistd-safer.m4 (gl_UNISTD_SAFER): Add unistd--.h to the list.
 
 2005-07-02  Paul Eggert  <eggert@cs.ucla.edu>
